Drop dependency on JOL
Slice 2.5 dropped dependency on JOL which was replaced by own implementation.